# SoundScape-bitbucket

./: BackgroundController.cpp  CMakeLists.txt  GoogleAPI.cpp  GoogleAPI.h  HandlePlaylistMap.cpp  Location.cpp  Location.h  Playlist.h  PlaylistMap.cpp  PlaylistMap.h  SoundScape  SoundScape.pro  SoundScape.pro.user.49140d8  SoundScape.sln  SoundScape.vcxproj  SoundScape.vcxproj.filters  SoundScape8.0.cpp  SoundScape8.0.h  Source.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.qml  playlist.cpp  readME.txt  request.cpp  selectLocationZone.ui  selectplaylist.cpp  selectplaylist.h  selectplaylist.ui  spotifyapi.cpp
exec format error/.qtc_clangd/: compile_commands.json
frontend/SoundScape/: BackgroundController.cpp  Location.cpp  MetaData.cpp  MetaData.h  SoundScape.pro  loginwindow.cpp  loginwindow.h  playlist.cpp  resource.qrc  selectplaylistwidget.ui
shubh/: README.txt
shubh/SoundScape/: BackgroundController.cpp  GoogleAPI.cpp  GoogleAPI.h  HandlePlaylistMap.cpp  Location.cpp  Location.h  MetaData.cpp  MetaData.h  PlaylistMap.cpp  PlaylistMap.h  Song.cpp  Song.h  SoundScape.pro  createplaylistmap.cpp  createplaylistmap.h  googleDelegate.cpp  locationjson.cpp  locationjson.h  locations.csv  locations.json  loginMap.qml  loginwindow 2.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  main.qml  mdata.csv  newLoc.qml  pingingBackground.cpp  pingingBackground.h  playlist.cpp  playlist.h  request.cpp  request.cpp.autosave  request.h  savelocation.cpp  savelocation.h  savelocation.ui  selectplaylist.cpp  (+11 more)
shubh/backend_getPlaylists/: Makefile  Song.h  (+10 more)
(+65 files in other folders)
